Switched to react for the frontend

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
+  script(type='text/babel', src='javascripts/_components/DashboardBox.js')
+  
+  #content
+
   h1= title
   p Welcome to #{title}
