Added basic structure in html

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,10 +1,8 @@
 @import "../external/bootstrap";
 
 body {
+  background: rgb(40, 44, 52);
+  color: #ffffff;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
 }
