--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-    script(type='text/babel', src='javascripts/_components/DashboardBox.js')
 
     #content
 
@@ -57,3 +56,5 @@ block content
           .pagespeed
             p Google PSI (mobile)
             span 78
+            
+      script(type='text/javascript', src='dist/script.js')
